Fixed tool spacing. ToDo Fix search box size

--- a/style.css
+++ b/style.css
@@ -11,16 +11,6 @@
 #header h1 {
     color:#222222;
 }
-.wrapper{
-	width: 650px;
-	margin: 0 auto;
-}
-.page-header h2{
-	margin-top: 0;
-}
-table tr td:last-child a{
-	margin-right: 15px;
-}
 .sortbyfield{
 	margin: 20px;
 }
